--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   /* general text style*/
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
-  background-color: #F6F6F6;
+  background-color: #F5F5F5;
 }
 
 h1 {
@@ -19,7 +19,8 @@ p {
 }
 
 img {
-  margin-bottom: 5vh;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 table {
@@ -63,6 +64,9 @@ tr td input {
   height: 80%;
   width: 100%;
   border-radius: 20px;
+  background-color: #0165A4;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 400;
 }
 
 #result {
@@ -77,7 +81,7 @@ tr td input {
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 90vh;
   align-items: center;
   justify-content: center;
   max-width: 90%;
