added jh branding

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ tr td input {
 footer {
   position: absolute;
   bottom: 0px;
-  text-align: center;
+  text-align: right;
   width: 100%;
   background-color: #0165A4;
   color: white;
@@ -95,8 +95,10 @@ a:hover {
 
 .jh {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  color: #0165A4;
+  margin-bottom: 5%;
 }
 
 .btn-primary {
@@ -116,7 +118,7 @@ a:hover {
 }
 
 #desl {
-  margin-bottom: 5%;
+  /*margin-bottom: 5%;*/
   margin-top: 5%;
 }
 
