--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ a:hover {
   padding: 5%;
   padding-bottom: 0;
   padding-top: 0;
+  width: 100%    
 }
 
 .jh {
@@ -106,6 +107,10 @@ a:hover {
   align-items: center;
   color: #0165A4;
   margin-bottom: 5%;
+}
+
+.img {
+  height= 300px;
 }
 
 .jh img {
@@ -149,8 +154,17 @@ a:hover {
   color: red;
 }
 
+#compass {
+  height: 300px
+}
+
 /*#### Tablets ####*/
 @media screen and (min-device-width: 480px){
+  
+  h1 {
+    font-size: 5rem;
+  }
+  
   td {
     font-size: 2rem;
   }
@@ -172,10 +186,24 @@ a:hover {
     padding-right: 20%;
     padding-left: 20%;
   }
+  
+  .jh img {
+    height: 50px;
+  }
+  
+  #compass {
+    height: 200px
+  }
+
 }
 
 /* #### Desktops #### */
 @media screen and (min-width: 1024px){
+  
+  h1 {
+    font-size: 2rem;
+  }
+  
   p {
     font-size: 1rem;
   }
@@ -209,6 +237,14 @@ a:hover {
 
   .banner {
     width: 70%;
+  }
+  
+  .jh img {
+    height: 40px;
+  }
+  
+  #compass {
+    height: 120px
   }
 }
 
